--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +12,49 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+<div class="container">
+    <img src="./assets/img/logo.png" alt="marmiton brand name">
+</div>
+    </header>
+    <main>
+<div class="container">
+    <h1>Pâte à crêpes simple</h1>
+    <p class="baseLine">Selon nos informations, cette recette est compatible avec le régime suivant : végétarien</p>
+    <div>
+        <p class="time">TEMPS TOTAL : 17 MIN</p>
+    </div>
+
+    <div id="gallery">
+        <img src="./assets/img/crepe-1.jpg" alt="Une crêpe">
+        <img src="./assets/img/crepe-2.jpg" alt="Une crêpe">
+        <img src="./assets/img/crepe-3.jpg" alt="Une crêpe">
+    </div>
+
+    <h2>Ingrédients</h2>
+
+    <ul>
+        <li>5 oeufs</li>
+        <li>500g de farine</li>
+        <li>1 litre de llait demi-écrémé</li>
+        <li>3 cuillères à soupe d'huile</li>
+        <li>1/2 verre de bière</li>
+    </ul>
+
+    <h2>Préparation</h2>
+
+    <h3>Etape 1</h3>
+    <p class="boldText">Dans un saladier verser la moitié de la farine, puis raoujouter les oeufs un à un, rajouter ensuite un peu de lait puis de la farine puis à nouveau un peu de lait et ainsi de suite.</p>
+
+    <h3>Etape 2</h3>
+    <p class="boldText">Enfin rajouter l'huile et la bière</p>
+
+    <h3>Etape 3</h3>
+    <p class="boldText">Laisser reposer 1 heure, votre pâte est prête</p>
+</div>
+    </main>
+    <footer>
+        <p>Marmiton 2020 - Site développé à Le Réacteur par MC</p>
+    </footer>
 </body>
 </html>
